--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -456,6 +456,180 @@ ol {
     }
 }
 
+
+.wysiwyg-block {
+    h6 {
+        color: $zephyr-gray;
+        font-family: $Sailec;
+        font-size: size(14);
+        font-weight: 400;
+        letter-spacing: size(0.44);
+        line-height: size(24);
+        text-transform: uppercase;
+        margin-bottom: size(10);
+    }
+    
+    h1 {
+        color: $zephyr-gray;
+        font-family: $Canela;
+        font-size: size(27);
+        font-weight: 300;
+        font-style: normal;
+        letter-spacing: size(0.58);
+        line-height: size(37.8);
+        margin-bottom: size(40);
+        @include min-medium-screen {
+            font-size: size(37);
+            line-height: size(47.8);
+        }
+        @include x-large-screen {
+            font-size: size(45);
+            letter-spacing: size(0.44);
+            line-height: size(66);
+        }
+    }
+    
+    h2 {
+        margin-bottom: size(30);
+        color: $zephyr-gray;
+        font-family: $Freight;
+        font-size: size(24);
+        font-weight: 500;
+        font-style: normal;
+        letter-spacing: size(0.2);
+        line-height: size(26);
+        @include x-large-screen {
+            font-size: size(32);
+        }
+    }
+    
+    h3 {
+        margin-bottom: size(20);
+        color: #808080;
+        font-family: $Freight;
+        font-size: size(18);
+        font-weight: 400;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: size(0.16);
+        @include x-large-screen {
+            font-size: size(24);
+            line-height: size(66);
+        }
+        
+        span {
+            font-size: size(12);
+            font-family: $Sailec;
+            letter-spacing: size(0.09);
+            margin-right: size(10);
+        }
+    }
+    
+    h4{
+        margin-bottom: size(10);
+        color: $zephyr-gray;
+        font-family: $Freight;
+        font-size: size(24);
+        font-weight: 500;
+        font-style: normal;
+        letter-spacing: size(0.2);
+        line-height: size(26);
+        @include x-large-screen {
+            font-size: size(32);
+        }
+        span {
+            margin-left: size(30);
+            @include min-medium-screen {
+                margin-left: 0;
+            }
+        }
+    }
+    
+    h5{
+        margin-bottom: size(10);
+        color: #808080;
+        font-family: $Freight;
+        font-size: size(18);
+        font-weight: 400;
+        font-style: italic;
+        line-height: normal;
+        letter-spacing: size(0.16);
+        @include x-large-screen {
+            font-size: size(24);
+            line-height: size(66);
+        }
+    }
+    
+    p {
+        margin-bottom: size(10);
+        color: $zephyr-gray;
+        font-family: $Freight;
+        font-size: size(14);
+        font-weight: 400;
+        letter-spacing: size(0.5);
+        line-height: size(24);
+        @include x-large-screen {
+            line-height: size(24);
+            font-size: size(15);
+        }
+    }
+    
+    img{
+        top: 0;
+        height: 100%;
+        object-fit: cover;
+    }
+    
+    select{
+        color: $zephyr-gray;
+        font-family: $Freight;
+        font-size: size(15);
+        font-weight: 600;
+        letter-spacing: size(0.27);
+        line-height: size(24);
+        text-transform: uppercase;
+    }
+    
+    ul {
+        list-style: none;
+        @include min-medium-screen {
+            padding-left: size(5);
+        }
+        
+        li {
+            color: $zephyr-gray;
+            font-family: $Freight;
+            font-size: size(15);
+            font-weight: 500;
+            line-height: size(24);
+            font-style: italic;
+            opacity: 0.85;
+            position: relative;
+            padding-left: size(12);
+            letter-spacing: size(0.5);
+            
+            &:not(:last-child) {
+                margin-bottom: size(5);
+                @include min-medium-screen {
+                    margin-bottom: size(11);
+                }
+            }
+            
+            &::before {
+                content: '';
+                position: absolute;
+                width: size(6);
+                height: size(6);
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+                background: #454545;
+                border-radius: 50%;
+            }
+        }
+    }
+}
+
 .search-input {
     @include marginX(size(25), size(18));
     border-top: 1px solid #c6c6c6;
