--- a/themes/zephyr/front-end/src/components/component-our-team/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-team/style.scss
@@ -32,13 +32,6 @@ section.component-our-team {
             }
             
             .team-parent {
-                &:nth-last-child(-n+4) {
-                    display: none;
-                    @include min-medium-screen {
-                        display: unset;
-                    }
-                }
-                
                 .team-person {
                     margin-bottom: size(30);
                     max-width: 100%;
@@ -71,14 +64,10 @@ section.component-our-team {
                             position: absolute;
                             top: 0;
                             height: 100%;
-                            transition: transform 400ms;
                             width: 100%;
+                            object-fit: contain;
                             @include min-medium-screen {
                                 margin-left: size(20);
-                            }
-                            
-                            &:hover {
-                                transform: translate(-10px, -10px) scale(1.1);
                             }
                         }
                         
