home slider with scroll DONE
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
@@ -10,8 +10,9 @@ section.component-home-swiper {
     
     .home-swiper-container {
         .home-swiper {
+            height: auto;
+    
             .left-side {
-                background: $zephyr-milky;
                 @include paddingY(size(47), size(55));
                 @include paddingX(size(25));
                 @include min-medium-screen {
