--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -177,6 +177,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, form {
     }
     
     .swiper-pagination-bullet {
+        cursor: pointer;
         position: relative;
         width: size(20);
         height: size(20);
