--- a/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
@@ -1,6 +1,8 @@
 .say-hello-wrapper {
     section.component-hero {
         .content {
+            margin-bottom:size(20);
+    
             .headline-1 {
                 @include x-large-screen {
                     font-size: size(60);
@@ -17,7 +19,11 @@
     
     section.component-contact-us {
         position: relative;
-        margin-top: size(-243);
-        margin-bottom: size(150);
+        margin-bottom: 0;
+        margin-top: 0;
+        .contact-us-model {
+            position: relative;
+            top: size(-243);
+        }
     }
 }
