barba blog skew
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -223,6 +223,17 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, form {
     background-color: #6be3a8;
 }
 
+.skew-overlay-transition {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    transform: translate(-100%, 0);
+    z-index: 6;
+    background-color: #ff0000;
+}
+
 // used
 .headline-1, {
     color: $zephyr-white;
