barba blog skew DONE
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
@@ -51,9 +51,23 @@
     }
     
     .right-content {
+        position: relative;
+        overflow: hidden;
+    
+        .skew-overlay-transition {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top: 0;
+            z-index: 6;
+            background-color: #ff9b78;
+        }
+    
         @include x-large-screen {
             padding-top: size(38);
         }
+    
         ul {
             @include min-medium-screen {
                 padding-left: size(5);
